--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -13,8 +13,8 @@
   padding: 0 2px !important;
 }
 
-.v-stepper-header {
-  overflow-x: hidden !important;
-}
+//.v-stepper-header {
+//  overflow-x: hidden !important;
+//}
 
 
