--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -5,7 +5,7 @@
 
   $field-border-width: 2px,
   $stepper-header-elevation: 0,
-  $stepper-border-radius: 16px,
+  $stepper-border-radius: 0,
 
   $stepper-window-margin: 0.5rem,
 );
